finished website congrats

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is jonny's shit site call 9111 immediately </title>
+    <title>About</title>
 </head>
 <body>
-
+<h1>FoR fuRthEr inQuieries plase cnatntct me johnhny boyaskyr at 2wetnjk23rfwd thkansd</h1>
 </body>
 </html>
