--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
 <h1>FoR fuRthEr inQuieries plase cnatntct me johnhny boyaskyr at 2wetnjk23rfwd thkansd</h1>
