--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 </head>
 <body>
-<h1>FoR fuRthEr inQuieries plase cnatntct me johnhny boyaskyr at 2wetnjk23rfwd thkansd</h1>
-
+<div>
+    <h1>Thank you for visiting RGB Consulting Group.</h1>
+    <h6>For all inquiries, please contact Jonathan Boyarsky at jboyarsky@fuck.fuck.</h6>
+</div>
 <img src="https://i.ytimg.com/vi/xjodBEJpA-Q/hqdefault.jpg">
 
 </body>
