Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="w3-bar w3-black w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-        <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
-        <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+        <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
+        <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
+        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
             <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -153,12 +153,14 @@
     <!-- The Contact Section -->
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
         <h2 class="w3-wide w3-center">CONTACT</h2>
-        <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+        <p class="w3-opacity w3-center"><i>Inquiry About Our Services</i></p>
         <div class="w3-row w3-padding-32">
             <div class="w3-col m6 w3-large w3-margin-bottom">
-                <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
-                <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
-                <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+                <i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
+                <i class="fa fa-map-marker" style="width:30px"></i>
+                San Jose, CR<br>
+                <i class="fa fa-phone" style="width:30px"></i> Phone: <+1 617-470-7125<br>
+                <i class="fa fa-envelope" style="width:30px"> </i> Email: jboyarsky@rgbconsultinggroup.com<br>
             </div>
             <div class="w3-col m6">
                 <form action="/action_page.php" target="_blank">
@@ -170,8 +172,8 @@
                             <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
                         </div>
                     </div>
-                    <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-                    <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
+                  <!--   <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+                    <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button> -->
                 </form>
             </div>
         </div>
