--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Let Us Help You</title>
+<title>Let Us, Help You</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -44,12 +44,11 @@
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
     <!-- Automatic Slideshow Images -->
-    <div class="mySlides w3-display-container w3-center">
+    <div class="w3-display-container w3-center">
         <img src="roundtableart.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-            <h3>Los Angeles</h3>
-            <p><b>We had the best time playing at Venice Beach!</b></p>
-        </div>
+            <h3>Let Us, Help You</h3>
+                    </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
         <img src="/w3images/ny.jpg" style="width:100%">
