--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <div class="w3-top">
     <div class="w3-bar w3-black w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
         <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
         <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
-            <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>
+          <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
                 <a href="#" class="w3-bar-item w3-button">Add whatever I want here</a>
                 <a href="#" class="w3-bar-item w3-button">Extras</a>
-                <a href="#" class="w3-bar-item w3-button">Media</a>
+                <a href="#" class="w3-bar-item w3-button">Media</a> -->
             </div>
         </div>
         <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
@@ -46,8 +46,8 @@
     <!-- Automatic Slideshow Images -->
     <div class="w3-display-container w3-center">
         <img src="roundtableart.jpg" style="width:100%">
-        <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-            <h3>Let Us, Help You</h3>
+        <div class="w3-container w3-text-black w3-padding-32 w3-padding-large">
+            <h3>We provide several different types of consulting</h3>
                     </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
