Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -101,28 +101,25 @@
                 <div class="w3-third w3-margin-bottom">
                     <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
                     <div class="w3-container w3-white">
-                        <p><b>New York</b></p>
-                        <p class="w3-opacity">Fri 27 Nov 2016</p>
-                        <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+                        <p><b>Process Improvement</b></p>
+                        <p class="w3-opacity">Using our diverse background and unique perspectives, we provide process improvement methods from documentation to packaging</p>
+                       <!--  <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
                     </div>
                 </div>
                 <div class="w3-third w3-margin-bottom">
                     <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
                     <div class="w3-container w3-white">
-                        <p><b>Paris</b></p>
-                        <p class="w3-opacity">Sat 28 Nov 2016</p>
-                        <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+                        <p><b>Automation</b></p>
+                        <p class="w3-opacity">We all have technical backgrounds ranging from engineering to computer science and will find ways to make your operations more efficient and less expensive.</p>
+                        <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
                     </div>
                 </div>
                 <div class="w3-third w3-margin-bottom">
                     <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
                     <div class="w3-container w3-white">
-                        <p><b>San Francisco</b></p>
-                        <p class="w3-opacity">Sun 29 Nov 2016</p>
-                        <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+                        <p><b>Data Analytics</b></p>
+                        <p class="w3-opacity">Using a variety of different quantitative methods we provide unimaginable insights into what makes your business tick.</p>
+                        <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
                     </div>
                 </div>
             </div>
@@ -159,7 +156,8 @@
                 <i class="fa fa-map-marker" style="width:30px"></i>
                 San Jose, CR<br>
                 <i class="fa fa-phone" style="width:30px"></i> Phone: <+1 617-470-7125<br>
-                <i class="fa fa-envelope" style="width:30px"> </i> Email: jboyarsky@rgbconsultinggroup.com<br>
+                <i class="fa fa-envelope" style="width:30px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
+                <i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: rrojas@rgbconsultinggroup.com<br>
             </div>
             <div class="w3-col m6">
                 <form action="/action_page.php" target="_blank">
