Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <!-- Automatic Slideshow Images -->
     <div class="w3-display-container w3-center">
         <img src="roundtableart.jpg" style="width:100%">
-        <div class="w3-container w3-text-black w3-padding-32 w3-padding-large">
-            <h3>We provide several different types of consulting</h3>
+         <div class="centered">We provide several different types of consulting from Data Management to Logistics to Custom Software
                     </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
