Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="w3-bar w3-black w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
-        <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
-        <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
+        <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
+        <a href="#services" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
         <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
@@ -34,8 +34,8 @@
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large">People</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large">Services</a>
+    <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large">People</a>
+    <a href="#Services" class="w3-bar-item w3-button w3-padding-large">Services</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">About Us!!!</a>
 </div>
@@ -46,7 +46,7 @@
     <!-- Automatic Slideshow Images -->
     <div class="w3-display-container w3-center">
         <img src="roundtableart.jpg" style="width:100%">
-         <div class="centered">We provide several different types of consulting from Data Management to Logistics to Custom Software
+         <div class="w3-center" >We provide several different types of consulting from Data Management to Logistics to Custom Software
                     </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
@@ -67,19 +67,19 @@
     <!-- The Band Section -->
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
         <h2 class="w3-wide">Mission Statement</h2>
-        <p class="w3-opacity"><i>We love music</i></p>
         <p class="w3-justify">Our mission is to provide innovative, modern, and impactful consulting services to meet our client needs. Through clear communication, data, and analytics we strive to find what within your business could be better. Our unique lens will provide high quality insights in order to save you money, make your business more efficient, and most importantly, make each one of our client’s work lives that much better.</p>
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
-                <p>Name</p>
-                <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                <p>Roberto Rojas</p>
+                <b>Founder, Principal Consultant</b>
             </div>
             <div class="w3-third">
-                <p>Name</p>
+                <p>Daniel Gutierrez</p>
+                <b>Founder, Principal Consultant</b>
             </div>
             <div class="w3-third">
-                <p>Name</p>
-                <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                <p>Jonathan Boyarsky</p>
+                <b>Founder, Principal Consultant</b>
             </div>
         </div>
     </div>
