Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
     <!-- The Tour Section -->
     <div class="w3-black" id="tour">
         <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-            <h2 class="w3-wide w3-center">TOUR DATES</h2>
-            <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
+            <h2 class="w3-wide w3-center">Our Services</h2>
+            <p class="w3-opacity w3-center"><i>If it's related to business or technology, we can help.</i></p><br>
 
-            <ul class="w3-ul w3-border w3-white w3-text-grey">
+            <!-- <ul class="w3-ul w3-border w3-white w3-text-grey">
                 <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
                 <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
                 <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
-            </ul>
+            </ul> -->
 
             <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
                 <div class="w3-third w3-margin-bottom">
@@ -106,7 +106,6 @@
                     </div>
                 </div>
                 <div class="w3-third w3-margin-bottom">
-                    <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
                     <div class="w3-container w3-white">
                         <p><b>Automation</b></p>
                         <p class="w3-opacity">We all have technical backgrounds ranging from engineering to computer science and will find ways to make your operations more efficient and less expensive.</p>
@@ -114,11 +113,18 @@
                     </div>
                 </div>
                 <div class="w3-third w3-margin-bottom">
-                    <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
                     <div class="w3-container w3-white">
                         <p><b>Data Analytics</b></p>
                         <p class="w3-opacity">Using a variety of different quantitative methods we provide unimaginable insights into what makes your business tick.</p>
                         <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
+                    </div>
+                </div>
+                <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+                <div class="w3-third w3-margin-bottom">
+                    <div class="w3-container w3-white">
+                        <p><b>Logistics</b></p>
+                        <p class="w3-opacity">From customer fulfillment to operations, we can help find the right solution for your logistics needs.</p>
+                       <!--  <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
                     </div>
                 </div>
             </div>
