--- a/index.html
+++ b/index.html
@@ -46,23 +46,26 @@
     <!-- Automatic Slideshow Images -->
     <div class="w3-display-container w3-center">
         <img src="roundtableart.jpg" style="width:100%">
-         <div class="w3-center" >We provide several different types of consulting from Data Management to Logistics to Custom Software
+         <h2>Consulting from Data Management to Logistics to Custom Software</h2> 
                     </div>
-    </div>
-    <div class="mySlides w3-display-container w3-center">
+                  
+
+</div>
+  <!--   </div>
+   <!--  <div class="mySlides w3-display-container w3-center">
         <img src="/w3images/ny.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
             <h3>New York</h3>
             <p><b>The atmosphere in New York is lorem ipsum.</b></p>
-        </div>
-    </div>
+        </div> -->
+  <!--   </div>
     <div class="mySlides w3-display-container w3-center">
         <img src="/w3images/chicago.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
             <h3>Chicago</h3>
             <p><b>Thank you, Chicago - A night we won't forget.</b></p>
         </div>
-    </div>
+    </div> --> -->
 
     <!-- The Band Section -->
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
@@ -85,7 +88,7 @@
     </div>
 
     <!-- The Tour Section -->
-    <div class="w3-black" id="tour">
+    <div class="w3-black" id="missionstatement">
         <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
             <h2 class="w3-wide w3-center">Our Services</h2>
             <p class="w3-opacity w3-center"><i>If it's related to business or technology, we can help.</i></p><br>
@@ -154,7 +157,7 @@
     <!-- The Contact Section -->
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
         <h2 class="w3-wide w3-center">CONTACT</h2>
-        <p class="w3-opacity w3-center"><i>Inquiry About Our Services</i></p>
+        <p class="w3-opacity w3-center"><i>Inquiry About Our Services? Definitely reach out.</i></p>
         <div class="w3-row w3-padding-32">
             <div class="w3-col m6 w3-large w3-margin-bottom">
                 <i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
@@ -167,12 +170,12 @@
             <div class="w3-col m6">
                 <form action="/action_page.php" target="_blank">
                     <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-                        <div class="w3-half">
+                      <!--   <div class="w3-half">
                             <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
                         </div>
                         <div class="w3-half">
                             <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-                        </div>
+                        </div> -->
                     </div>
                   <!--   <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
                     <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button> -->
