--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
     <!-- Automatic Slideshow Images -->
-    <div class="w3-display-container w3-center">
+    <div class="w3-display-container w3-center"> <h2><span>Consulting Services from Data Management to Logistics to Custom Software<span></h2>
         <img src="roundtableart.jpg" style="width:100%">
-         <h2>Consulting from Data Management to Logistics to Custom Software</h2> 
+        
+
                     </div>
                   
 
@@ -101,7 +102,6 @@
 
             <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
                 <div class="w3-third w3-margin-bottom">
-                    <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
                     <div class="w3-container w3-white">
                         <p><b>Process Improvement</b></p>
                         <p class="w3-opacity">Using our diverse background and unique perspectives, we provide process improvement methods from documentation to packaging</p>
@@ -122,6 +122,16 @@
                         <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
                     </div>
                 </div>
+                 <div class="w3-third w3-margin-bottom">
+                    <div class="w3-container w3-white">
+                        <p><b>Custom Software</b></p>
+                        <p class="w3-opacity">Our team is exceptionally skilled at coding. We can create software from mobile apps to machine learning. </p>
+                    </div>
+                     <div class="w3-third w3-margin-bottom">
+                    <div class="w3-container w3-white">
+                        <p><b>Suppl Chain</b></p>
+                        <p class="w3-opacity">Dealing with vendors and distributors can be hassel, but fortunately, we can make it a whole lot easier. </p>
+                    </div>
                 <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
                 <div class="w3-third w3-margin-bottom">
                     <div class="w3-container w3-white">
