Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
-        <a href="#services" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
+        <a href="#Services" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
         <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
@@ -44,8 +44,12 @@
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
     <!-- Automatic Slideshow Images -->
-    <div class="w3-display-container w3-center"> <h2><span>Consulting Services from Data Management to Logistics to Custom Software<span></h2>
+    <!-- <div class=""w3-display-container w3-center"">  -->
+<div class="relative">
+        <h2><span>Consulting Services from Data Management to Logistics to Custom Software<span></h2>
         <img src="roundtableart.jpg" style="width:100%">
+  <p class="absolute-text">Hey I am text on an Image.</a> </p>
+</div>
         
 
                     </div>
@@ -122,6 +126,7 @@
                         <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
                     </div>
                 </div>
+                <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
                  <div class="w3-third w3-margin-bottom">
                     <div class="w3-container w3-white">
                         <p><b>Custom Software</b></p>
@@ -129,7 +134,7 @@
                     </div>
                      <div class="w3-third w3-margin-bottom">
                     <div class="w3-container w3-white">
-                        <p><b>Suppl Chain</b></p>
+                        <p><b>Supplu Chain</b></p>
                         <p class="w3-opacity">Dealing with vendors and distributors can be hassel, but fortunately, we can make it a whole lot easier. </p>
                     </div>
                 <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
