Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 <div class="relative">
         <h2><span>Consulting Services from Data Management to Logistics to Custom Software<span></h2>
         <img src="roundtableart.jpg" style="width:100%">
-  <p class="absolute-text">Hey I am text on an Image.</a> </p>
 </div>
         
 
@@ -127,6 +126,29 @@
                     </div>
                 </div>
                 <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+                <div class="w3-third w3-margin-bottom">
+                    <div class="w3-container w3-white">
+                        <p><b>Custom Software</b></p>
+                        <p class="w3-opacity">Our team is exceptionally skilled at coding. We can create software from mobile apps to machine learning. </p>
+                       <!--  <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
+                    </div>
+                </div>
+                <div class="w3-third w3-margin-bottom">
+                    <div class="w3-container w3-white">
+                        <p><b>Supply Chain</b></p>
+                        <p class="w3-opacity">Dealing with vendors and distributors can be hassel, but fortunately, we can make it a whole lot easier. </p>
+                        <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
+                    </div>
+                </div>
+                <div class="w3-third w3-margin-bottom">
+                    <div class="w3-container w3-white">
+                        <p><b>Logistics</b></p>
+                        <p class="w3-opacity">From customer fulfillment to operations, we can help find the right solution for your logistics needs.</p>
+
+                        <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
+                    </div>
+                </div>
+                <!-- <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
                  <div class="w3-third w3-margin-bottom">
                     <div class="w3-container w3-white">
                         <p><b>Custom Software</b></p>
@@ -148,7 +170,7 @@
             </div>
         </div>
     </div>
-
+ -->
     <!-- Ticket Modal -->
     <div id="ticketModal" class="w3-modal">
         <div class="w3-modal-content w3-animate-top w3-card-4">
@@ -170,7 +192,7 @@
     </div>
 
     <!-- The Contact Section -->
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:900px" id="contact>
         <h2 class="w3-wide w3-center">CONTACT</h2>
         <p class="w3-opacity w3-center"><i>Inquiry About Our Services? Definitely reach out.</i></p>
         <div class="w3-row w3-padding-32">
