--- a/index.html
+++ b/index.html
@@ -55,6 +55,34 @@
                   
 
 </div>
+<div> 
+    <div id="container" 
+ { height: 400px;
+  width: 400px;
+  position: relative;
+}
+#image {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+#text {
+  z-index: 100;
+  position: absolute;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  left: 150px;
+  top: 350px;
+}
+</div>
+
+<div id="container">
+  <img id="image" src="http://www.noao.edu/image_gallery/images/d4/androa.jpg" />
+  <p id="text">
+    Hello World!
+  </p>
+</div>
   <!--   </div>
    <!--  <div class="mySlides w3-display-container w3-center">
         <img src="/w3images/ny.jpg" style="width:100%">
@@ -72,6 +100,7 @@
     </div> --> -->
 
     <!-- The Band Section -->
+    <div class="w3-black" id="missionstatement">
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
         <h2 class="w3-wide">Mission Statement</h2>
         <p class="w3-justify">Our mission is to provide innovative, modern, and impactful consulting services to meet our client needs. Through clear communication, data, and analytics we strive to find what within your business could be better. Our unique lens will provide high quality insights in order to save you money, make your business more efficient, and most importantly, make each one of our client’s work lives that much better.</p>
@@ -92,7 +121,7 @@
     </div>
 
     <!-- The Tour Section -->
-    <div class="w3-black" id="missionstatement">
+    <div class="w3-black" id="services">
         <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
             <h2 class="w3-wide w3-center">Our Services</h2>
             <p class="w3-opacity w3-center"><i>If it's related to business or technology, we can help.</i></p><br>
@@ -172,6 +201,7 @@
     </div>
  -->
     <!-- Ticket Modal -->
+    <div class="w3-black" id="contact">
     <div id="ticketModal" class="w3-modal">
         <div class="w3-modal-content w3-animate-top w3-card-4">
             <header class="w3-container w3-teal w3-center w3-padding-32">
