Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
-        <a href="#Services" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
+        <a href="#services" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
         <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
@@ -35,7 +35,7 @@
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
     <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large">People</a>
-    <a href="#Services" class="w3-bar-item w3-button w3-padding-large">Services</a>
+    <a href="#services" class="w3-bar-item w3-button w3-padding-large">Services</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">About Us!!!</a>
 </div>
@@ -51,38 +51,8 @@
 </div>
         
 
-                    </div>
                   
 
-</div>
-<div> 
-    <div id="container" 
- { height: 400px;
-  width: 400px;
-  position: relative;
-}
-#image {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-#text {
-  z-index: 100;
-  position: absolute;
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
-  left: 150px;
-  top: 350px;
-}
-</div>
-
-<div id="container">
-  <img id="image" src="http://www.noao.edu/image_gallery/images/d4/androa.jpg" />
-  <p id="text">
-    Hello World!
-  </p>
-</div>
   <!--   </div>
    <!--  <div class="mySlides w3-display-container w3-center">
         <img src="/w3images/ny.jpg" style="width:100%">
@@ -97,11 +67,11 @@
             <h3>Chicago</h3>
             <p><b>Thank you, Chicago - A night we won't forget.</b></p>
         </div>
-    </div> --> -->
+    </div> -->
 
     <!-- The Band Section -->
     <div class="w3-black" id="missionstatement">
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
         <h2 class="w3-wide">Mission Statement</h2>
         <p class="w3-justify">Our mission is to provide innovative, modern, and impactful consulting services to meet our client needs. Through clear communication, data, and analytics we strive to find what within your business could be better. Our unique lens will provide high quality insights in order to save you money, make your business more efficient, and most importantly, make each one of our client’s work lives that much better.</p>
         <div class="w3-row w3-padding-32">
@@ -222,8 +192,8 @@
     </div>
 
     <!-- The Contact Section -->
-    <div class="w3-container w3-content w3-padding-64" style="max-width:900px" id="contact>
-        <h2 class="w3-wide w3-center">CONTACT</h2>
+    <div class="w3-container w3-content w3-padding-64" style="max-width:900px" id="contact">
+        <h2 class="w3-wide w3-center">contact</h2>
         <p class="w3-opacity w3-center"><i>Inquiry About Our Services? Definitely reach out.</i></p>
         <div class="w3-row w3-padding-32">
             <div class="w3-col m6 w3-large w3-margin-bottom">
