--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
 <div class="relative">
-        <h2><span>Consulting Services from Data Management to Logistics to Custom Software<span></h2>
         <img src="roundtableart.jpg" style="width:100%">
+        <p class="absolute-text">Consulting Services from Data Management to Logistics to Custom Software.</a> </p>
+    </div>
 </div>
+
         
 
                   
@@ -193,16 +195,16 @@
 
     <!-- The Contact Section -->
     <div class="w3-container w3-content w3-padding-64" style="max-width:900px" id="contact">
-        <h2 class="w3-wide w3-center">contact</h2>
+        <h2 class="w3-wide w3-center">Contact</h2>
         <p class="w3-opacity w3-center"><i>Inquiry About Our Services? Definitely reach out.</i></p>
         <div class="w3-row w3-padding-32">
             <div class="w3-col m6 w3-large w3-margin-bottom">
-                <i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
-                <i class="fa fa-map-marker" style="width:30px"></i>
+                <i class="fa fa-map-marker" style="width:65px"></i> Boston, US<br>
+                <i class="fa fa-map-marker" style="width:65px"></i>
                 San Jose, CR<br>
-                <i class="fa fa-phone" style="width:30px"></i> Phone: <+1 617-470-7125<br>
-                <i class="fa fa-envelope" style="width:30px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
-                <i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: rrojas@rgbconsultinggroup.com<br>
+                <i class="fa fa-phone" style="width:65px"></i> Phone: <+1 617-470-7125<br>
+                <i class="fa fa-envelope" style="width:65px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
+                <i class="fa fa-envelope" style="width:65px"> </i> For Latin American Inquiries Email: rrojas@rgbconsultinggroup.com<br>
             </div>
             <div class="w3-col m6">
                 <form action="/action_page.php" target="_blank">
@@ -224,7 +226,7 @@
     <!-- End Page Content -->
 </div>
 <!-- Add Google Maps -->
-<div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
+<!--<div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
 <script>
     function myMap() {
         myCenter=new google.maps.LatLng(41.878114, -87.629798);
