--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <h2 class="w3-wide w3-center">Contact</h2>
         <p class="w3-opacity w3-center"><i>Inquiry About Our Services? Definitely reach out.</i></p>
         <div class="w3-row w3-padding-32">
-            <div class="w3-col m6 w3-large w3-center">
+            <div class="w3-col m6 w3-large w3-margin-bottom">
                 <i class="fa fa-map-marker" style="width:65px"></i> Boston, US<br>
                 <i class="fa fa-map-marker" style="width:65px"></i>
                 San Jose, CR<br>
