--- a/index.html
+++ b/index.html
@@ -192,18 +192,17 @@
     </div>
 
     <!-- The Contact Section -->
-    <div class="w3-container w3-content w3-padding-64" style="max-width:650px" id="contact">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-margin-left">Contact</h2>
-        <p class="w3-opacity w3-center"><i>Inquiry About Our Services? Definitely reach out.</i></p>
+        <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
         <div class="w3-row w3-padding-32">
             <div class="w3-col m6 w3-large w3-margin-bottom">
                 <i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
                 <i class="fa fa-map-marker" style="width:30px"></i>
                 San Jose, CR<br>
-                <i class="fa fa-phone" style="width:300px"></i> Phone: +1 617-470-7125<br>
-                <i class="fa fa-envelope" style="width:3000px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
-                <p class="w3-opacity w3-center> 
-                <i class="fa fa-envelope" style= </i></p> For Latin American Inquiries Email: rrojas@rgbconsultinggroup.com<br>
+                <i class="fa fa-phone" style="width:30px"></i> Phone: +1 617-470-7125<br>
+                <i class="fa fa-envelope" style="width:30px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
+                <i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: rrojas@rgbconsultinggroup.com<br>
             </div>
             <div class="w3-col m6">
                 <form action="/action_page.php" target="_blank">
