Ben is happy for me

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 San Jose, CR<br>
                 <i class="fa fa-phone" style="width:30px"></i> Phone: +1 617-470-7125<br>
                 <i class="fa fa-envelope" style="width:30px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
-                <i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: rrojas@rgbconsultinggroup.com<br>
+                <i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: <br>rrojas@rgbconsultinggroup.com<br>
             </div>
             <div class="w3-col m6">
                 <form action="/action_page.php" target="_blank">
