--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <p>Roberto Rojas</p>
-                <b>Founder, Principal Consultant</b><a href="https://www.linkedin.com/in/robertojrojas/?lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_top%3BMrphaPSRRCesmozDyzTE5Q%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_search_srp_top-search_srp_result&lici=LoGL8jYJT2aUkiXFijhdTA%3D%3D.asp" target="_blank">Linkedin</a>
+                <b>Founder, Principal Consultant</b><b><a href="https://www.linkedin.com/in/robertojrojas/?lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_top%3BMrphaPSRRCesmozDyzTE5Q%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_search_srp_top-search_srp_result&lici=LoGL8jYJT2aUkiXFijhdTA%3D%3D.asp" target="_blank">Linkedin</a></b>
             </div>
             <div class="w3-third">
                 <p>Daniel Gutierrez</p>
-                <b>Founder, Principal Consultant</b>
-                <b> <i class="fa fa-linkedin w3-hover-opacity"></i>
+                <b>Founder, Principal Consultant </b>
+                <b> <b><a href="https://www.linkedin.com/in/daniel-gutierrez-271396aa/.asp" target="_blank">Linkedin</a></b></i>
             </div>
             <div class="w3-third">
                 <p>Jonathan Boyarsky</p>
-                <b>Founder, Principal Consultant</b>
+                <b>Founder, Principal Consultant  </b><b><a href="https://www.linkedin.com/in/jonathan-boyarsky-4b4a03a6/.asp" target="_blank">Linkedin</a></b>
             </div>
         </div>
     </div>
