added my github name

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <p>Roberto Rojas</p>
-                <b>Founder, Principal Consultant</b><b><a href="https://www.linkedin.com/in/robertojrojas/?lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_top%3BMrphaPSRRCesmozDyzTE5Q%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_search_srp_top-search_srp_result&lici=LoGL8jYJT2aUkiXFijhdTA%3D%3D.asp" target="_blank">Linkedin</a></b>
+                <b>Founder, Principal Consultant</b><b><b><a href="https://www.linkedin.com/in/robertojrojas/?lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_top%3BMrphaPSRRCesmozDyzTE5Q%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_search_srp_top-search_srp_result&lici=LoGL8jYJT2aUkiXFijhdTA%3D%3D.asp" target="_blank">Linkedin</a></b></b>
             </div>
             <div class="w3-third">
                 <p>Daniel Gutierrez</p>
