added my github name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
-        <a href="#services" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
+        <a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
         <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
@@ -94,62 +94,7 @@
     </div>
 
     <!-- The Tour Section -->
-    <div class="w3-black" id="services">
-        <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-            <h2 class="w3-wide w3-center">Our Services</h2>
-            <p class="w3-opacity w3-center"><i>If it's related to business or technology, we can help.</i></p><br>
-
-            <!-- <ul class="w3-ul w3-border w3-white w3-text-grey">
-                <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-                <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-                <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
-            </ul> -->
-
-            <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-                <div class="w3-third w3-margin-bottom">
-                    <div class="w3-container w3-white">
-                        <p><b>Process Improvement</b></p>
-                        <p class="w3-opacity">Using our diverse background and unique perspectives, we provide process improvement methods from documentation to packaging</p>
-                       <!--  <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
-                    </div>
-                </div>
-                <div class="w3-third w3-margin-bottom">
-                    <div class="w3-container w3-white">
-                        <p><b>Automation</b></p>
-                        <p class="w3-opacity">We all have technical backgrounds ranging from engineering to computer science and will find ways to make your operations more efficient and less expensive.</p>
-                        <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
-                    </div>
-                </div>
-                <div class="w3-third w3-margin-bottom">
-                    <div class="w3-container w3-white">
-                        <p><b>Data Analytics</b></p>
-                        <p class="w3-opacity">Using a variety of different quantitative methods we provide unimaginable insights into what makes your business tick.</p>
-                        <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
-                    </div>
-                </div>
-                <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-                <div class="w3-third w3-margin-bottom">
-                    <div class="w3-container w3-white">
-                        <p><b>Custom Software</b></p>
-                        <p class="w3-opacity">Our team is exceptionally skilled at coding. We can create software from mobile apps to machine learning. </p>
-                       <!--  <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
-                    </div>
-                </div>
-                <div class="w3-third w3-margin-bottom">
-                    <div class="w3-container w3-white">
-                        <p><b>Supply Chain</b></p>
-                        <p class="w3-opacity">Dealing with vendors and distributors can be hassel, but fortunately, we can make it a whole lot easier. </p>
-                        <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
-                    </div>
-                </div>
-                <div class="w3-third w3-margin-bottom">
-                    <div class="w3-container w3-white">
-                        <p><b>Logistics</b></p>
-                        <p class="w3-opacity">From customer fulfillment to operations, we can help find the right solution for your logistics needs.</p>
-
-                        <!-- <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button> -->
-                    </div>
-                </div>
+    
                 <!-- <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
                  <div class="w3-third w3-margin-bottom">
                     <div class="w3-container w3-white">
